# tennis-movement-analysis

./: .gitignore  README.md  audio_commentary.py  audio_description.py  ball_events.py  bounce_detection.py  bytetrack.yaml  contact_detection.py  draw.py  homography.py  main.py  model.py  pipeline_utils.py  point_builder.py  predictor.py  pyproject.toml  read_video.py  speech_scheduler.py  tennis_events.py  test.py  track_loading.py  yolo_inference.py
model/: bounce_classifier.cbm
outputs/: ball.csv  ball_events.csv  ball_homography.csv  court.csv  homography.csv  player.csv  player_homography.csv  tennis_events.csv
outputs/test1/geometry/: ball_homography.csv  homography.csv  player_homography.csv
outputs/test1/narration/: bounce.csv  commentary.srt  commentary.txt  contact_debug.csv  contact_episodes.csv  moments.csv  scheduled_lines.csv
outputs/test1/raw/: court.csv  player.csv
outputs/test2/geometry/: ball_homography.csv  homography.csv  player_homography.csv
outputs/test2/narration/: bounce.csv  commentary.srt  commentary.txt  contact_debug.csv  contact_episodes.csv  moments.csv  scheduled_lines.csv
outputs/test2/raw/: ball.csv  court.csv  player.csv
tests/: test_pipeline.py
training/: tennis_ball_training.ipynb
training/ball/: ball_training_colab.ipynb  createheatmap.py  test_gt.ipynb
training/bounce/: train.py
training/court/: image.py  video.py
training/player/: README.md  bytetrack_custom.yaml
training/tennis-ball-detection/: data.yaml
training/tennis-ball-detection-1/: README.dataset.txt  README.roboflow.txt  data.yaml
(+21 files in other folders)
