[project]
name = "tennis-movement-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2,<3",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "torch==2.11.0+cu126",
    "torchvision==0.26.0+cu126",
    "ultralytics>=8.4.41",
]
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
